--- a/src/assets/css/normalize.css
+++ b/src/assets/css/normalize.css
@@ -56,6 +56,14 @@ hr {
   overflow: visible; /* 2 */
 }
 
+ul {
+  padding-left: 0;
+}
+
+li {
+  list-style: none;
+}
+
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
